// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image Reducer Tests State Changes should load city on success of loading 1`] = `
Object {
  "city": Object {},
  "error": undefined,
  "isLoading": false,
}
`;

exports[`Image Reducer Tests State Changes should save error on error of loading 1`] = `
Object {
  "city": undefined,
  "error": "Error",
  "isLoading": false,
}
`;
